--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,14 @@ name = "data-science-bootcamp-lecture-1"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.10"
 dependencies = [
     "gdown>=5.2.0",
-    "numpy>=2.3.2",
-    "pandas>=2.3.1",
-    "polars>=1.32.3",
+    "ipywidgets>=8.1.7",
+    "jupyter>=1.1.1",
+    "pandas>=2.3.2",
+    "pyarrow>=21.0.0",
+    "rich>=14.1.0",
+    "setuptools>=80.9.0",
+    "ydata-profiling>=4.16.1",
 ]
