Add XGBoost model building to the project

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "pandas>=2.3.2",
     "pyarrow>=21.0.0",
     "rich>=14.1.0",
+    "scikit-learn>=1.7.1",
     "setuptools>=80.9.0",
+    "xgboost>=3.0.4",
     "ydata-profiling>=4.16.1",
 ]
