--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "scikit-learn>=1.7.1",
     "seaborn>=0.13.2",
     "setuptools>=80.9.0",
+    "torch>=2.8.0",
     "xgboost>=3.0.4",
     "ydata-profiling>=4.16.1",
 ]
