--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "gdown>=5.2.0",
     "ipywidgets>=8.1.7",
     "jupyter>=1.1.1",
+    "kaggle>=1.7.4.5",
     "pandas>=2.3.2",
     "pyarrow>=21.0.0",
     "rich>=14.1.0",
