--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "kaggle>=1.7.4.5",
     "pandas>=2.3.2",
     "pyarrow>=21.0.0",
+    "rdata>=0.11.2",
     "rich>=14.1.0",
     "scikit-learn>=1.7.1",
     "seaborn>=0.13.2",
